solved whitespace on right side mobile bug
Added the following lines to the bottom of  body selector: 
overflow-x: hidden;  
margin: 0px;

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
   color: #777777;
   background: #fff;
   height: 100%;
+  overflow-x: hidden;
+  margin: 0px;
 }
 
 p { margin-bottom: 1.5em; }
